Add pagination and refresh UI for sightings and highlights

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Ting Vision wildlife monitoring dashboard for real-time sightings and highlights"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -33,7 +33,7 @@
     <title>Ting Vision</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>You need to enable JavaScript to use the Ting Vision dashboard.</noscript>
     <div id="root"></div>
     <!--
       This HTML file is a template.
